feat:接入 langchain4j，模型适配层改造